# Fault-tolerant-compilation

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  steane.ipynb
docs/: AGENTS.md  architecture.md  modeling_assumptions.md
docs/explained/: decoder.md  direct_stim.md  ideal_memory.md  noise.md  pauli.md  physical_memory.md  steane_code.md  suppression.md  syndromes.md
scripts/: run_level_scan.py
src/concatenated_steane/: __init__.py  decoder.py  noise.py  pauli.py  steane_code.py  syndromes.py
src/concatenated_steane/analysis/: __init__.py  suppression.py
src/concatenated_steane/circuits/: __init__.py  physical_memory.py
src/concatenated_steane/simulation/: __init__.py  direct_stim.py  ideal_memory.py
tests/: test_decoder.py  test_ideal_memory.py  test_noise.py  test_pauli.py  test_physical_memory.py  test_steane_code.py  test_suppression.py  test_syndromes.py
