[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concatenated-steane-memory"
version = "0.1.0"
description = "Pedagogy-first simulations of memory error suppression in the concatenated Steane code."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "stim>=1.15",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
